Update what tools are checked in with the repo

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 
 /tools/**/vendor/
+/tools/**/composer.lock
 .php-cs-fixer.cache
-.php-cs-fixer.dist.php
