Remove config for phpcs in scrutinizer, lacks config file

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -19,7 +19,7 @@ build:
             tests:
                 override:
                     - php-scrutinizer-run
-                    - phpcs-run # Not used, missing config file
+                    #- phpcs-run # Not used, missing config file
     tests:
         override:
             -   command: "composer phpunit"
